tests/ui/typeck/issue-114529-illegal-break-with-value.stderr
error[E0571]: `break` with value from a `while` loop
  --> $DIR/issue-114529-illegal-break-with-value.rs:9:13
   |
LL |         while true {
   |         ---------- you can't `break` with a value in a `while` loop
LL |             break 9;
   |             ^^^^^^^ can only break with a value inside `loop` or breakable block
   |
help: use `break` on its own without a value inside this `while` loop
   |
LL |             break;
   |             ~~~~~

error[E0571]: `break` with value from a `while` loop
  --> $DIR/issue-114529-illegal-break-with-value.rs:16:13
   |
LL |         while let Some(v) = Some(9) {
   |         --------------------------- you can't `break` with a value in a `while` loop
LL |             break v;
   |             ^^^^^^^ can only break with a value inside `loop` or breakable block
   |
help: use `break` on its own without a value inside this `while` loop
   |
LL |             break;
   |             ~~~~~

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0571`.
